corrections of alignments

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     top: 2.13%;
 
-    width: 83.8%;
+    width: 100%;
     position: relative;
 }
 
@@ -21,12 +21,12 @@ margin: 0;
 }
 .mainNav .profile{
     box-sizing: border-box;
-    position: relative;
+    position:absolute;
     display: flex;
 
 align-items: center;
 justify-content: center;
-    left: 85.5%;
+    right: 0;
     float: right;
     padding-right: 52px;
     
