--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -58,3 +58,8 @@ box-shadow: 5px 5px 55px #0000000D;
     letter-spacing: 0px;
     color: #9B9B9B;
 }
+@media only screen and (max-width: 184px){
+    #sidebar{
+        display: none;
+    }
+}
